Aplica as exceções criadas ao projeto